# polymarket

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  demo_time_varying_gbm.py  download_pmxt.py  example.py  pyproject.toml  test_gbm_hourly_estimator.py  test_new_client.py
notebooks/: Untitled-1.json  api-keys.ipynb  btc-model.ipynb  btc-qqq-yf.ipynb  build_trade_signal_workspace.py  compare-polymarket.ipynb  condition_trades_viz.ipynb  condition_wallet_groups.ipynb  contract_trade_and_positions.ipynb  garch.ipynb  hour-estimator.ipynb  load-contracts.ipynb  plot_contract_trade_and_positions.py  plot_returns.ipynb  polygon.ipynb  polygon_trade_analysis.ipynb  polymarket_analysis_demo.ipynb  profitable_wallet_analysis.ipynb  public_trade_analysis.ipynb  render_trade_signal_pnl_plot.py  run-backtest.ipynb  test_hour_estimator.ipynb  test_new_client.ipynb  trade-analysis.ipynb  trade_signal_discovery_summary.csv  variance-percentiles.ipynb  wallet_pnl_chart.ipynb  wallet_signal_strategy_exploration.ipynb  wallet_signal_v2.ipynb
notebooks/flow/: run_pipeline.py  stage0_initial_filtering.ipynb  stage1_profitable_wallet_analysis.ipynb  stage1_wallet_strategy_selection.ipynb  stage2_backtest.ipynb  stage2_backtest_simplified.ipynb  stage2_wallet_signal.ipynb  stage3_backtest.ipynb  stage3_polybot_backtest_visualization.ipynb
src/polymarket_analysis/: __init__.py
src/polymarket_analysis/analytics/: gbm_5min_estimator.py  gbm_backtester.py  gbm_extender.py  gbm_hourly_template_estimator.py  gbm_param_estimator.py
tests/: test_execution_tape.py
(+32 files in other folders)
